--- a/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -19,7 +19,8 @@
             <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -30,19 +31,15 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <StackPane GridPane.columnIndex="1">
-                     <children>
-                        <Rectangle fill="RED" height="40.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="120.0" />
-                        <Label onMouseClicked="#handleQuitGameClicked" onMouseEntered="#handleQuitGameEntered" onMouseExited="#handleQuitGameExited" styleClass="dialog-text" stylesheets="@../css/main.css" text="QUIT GAME" textFill="WHITE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="10.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </StackPane>
+                  <Line endY="35.0" startY="5.0" stroke="WHITE" GridPane.columnIndex="1" />
+                  <Label onMouseClicked="#handleQuitGameClicked" onMouseEntered="#handleQuitGameEntered" onMouseExited="#handleQuitGameExited" styleClass="dialog-text" stylesheets="@../css/main.css" text="QUIT GAME" textFill="WHITE" GridPane.columnIndex="2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
                </children>
             </GridPane>
          </children>
