--- a/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -21,15 +19,7 @@
    <children>
       <fx:include fx:id="characterLeft" source="CharacterLeftView.fxml" />
       <fx:include fx:id="characterRight" source="CharacterRightView.fxml" />
-      <Group>
-         <children>
-            <ImageView fitHeight="55.0" fitWidth="47.0" layoutX="500.0" layoutY="300" onMouseClicked="#handleFrisbeeClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
-               <image>
-                  <Image url="@../images/frisbee01.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Group>
+      <fx:include fx:id="frisbee" source="FrisbeeView.fxml" />
       <Group layoutX="480.0" layoutY="270.0">
          <children>
             <GridPane fx:id="levelSuccessDialog" maxHeight="270.0" maxWidth="480.0" minHeight="90.0" minWidth="160.0" prefHeight="180.0" prefWidth="320.0" styleClass="dialog-background" stylesheets="@../css/level.css">
