--- a/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
@@ -29,6 +29,11 @@
     -fx-padding: 12px 10px 10px 10px;
 }
 
+.menu-button.button-light,
+.menu-item {
+    -fx-padding: 5px 10px 5px 10px;
+}
+
 .button-dark {
     -fx-background-color: rgba(0, 0, 0, 0.8);
     -fx-text-fill: rgba(255, 255, 255, 1);
