--- a/frontend/src/main/resources/puf/frisbee/frontend/view/RegistrationLoginView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/RegistrationLoginView.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.RegistrationLoginView">
     <children>
@@ -59,7 +58,7 @@
     </children>
     <stylesheets>
         <URL value="@../css/main.css" />
-        <URL value="@../css/registrationlogin.css" />
+        <URL value="@../css/form.css" />
     </stylesheets>
 
 </AnchorPane>
