--- a/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterRightView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterRightView.fxml
@@ -15,8 +15,7 @@
                    <Image url="@../images/Character_02.gif" />
                </image>
            </ImageView>
-            <Circle fx:id="catcherLeftHand" fill="#1f93ff80" radius="30.0" stroke="BLACK" strokeType="INSIDE" />
-            <Circle fx:id="catcherRightHand" fill="#1f93ff80" radius="30.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fx:id="catchingZone" fill="#1f93ff80" layoutX="86.0" layoutY="50.0" radius="50.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </Group>
  </children>
