Start button repositioned.

--- a/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
@@ -39,3 +39,9 @@
     -fx-text-fill: rgba(255, 255, 255, 1);
     -fx-padding: 12px 10px 10px 10px;
 }
+
+.button-darkred {
+    -fx-background-color: rgba(128, 0, 0, 0.8);
+    -fx-text-fill: rgba(255, 255, 255, 1);
+    -fx-padding: 12px 10px 10px 10px;
+}
