--- a/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
@@ -29,9 +29,8 @@
     -fx-padding: 12px 10px 10px 10px;
 }
 
-.menu-button.button-light,
-.menu-item {
-    -fx-padding: 5px 10px 5px 10px;
+.button-light-menu-item {
+    -fx-padding: 6px 10px;
 }
 
 .button-dark {
