--- a/frontend/src/main/resources/puf/frisbee/frontend/view/ProfileView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/ProfileView.fxml
@@ -8,19 +8,24 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.ProfileView">
     <children>
-      <VBox alignment="CENTER" minHeight="720.0" minWidth="1280.0">
+      <StackPane fx:id="gameSuccessDialog">
          <children>
-              <VBox alignment="TOP_CENTER" maxWidth="500.0" prefWidth="500.0">
+            <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+              <VBox alignment="TOP_CENTER">
                <children>
                   <Label stylesheets="@../css/form.css" text="USER PROFILE">
                      <styleClass>
                         <String fx:value="form-label" />
                         <String fx:value="form-heading" />
-                     </styleClass></Label>
+                     </styleClass>
+                  </Label>
                   <Label styleClass="form-label" stylesheets="@../css/form.css" text="NAME" />
                   <TextField fx:id="profileName" maxWidth="-Infinity" prefWidth="200.0" styleClass="form-inputfield" stylesheets="@../css/form.css" />
                   <Label styleClass="form-label" stylesheets="@../css/form.css" text="EMAIL" />
@@ -28,30 +33,44 @@
                      <styleClass>
                         <String fx:value="form-inputfield" />
                         <String fx:value="form-inputfield-disabled" />
-                     </styleClass></TextField>
+                     </styleClass>
+                  </TextField>
                   <Label styleClass="form-label" stylesheets="@../css/form.css" text="PASSWORD" />
                   <PasswordField fx:id="profilePassword" maxWidth="-Infinity" prefHeight="26.0" prefWidth="200.0" styleClass="form-inputfield" stylesheets="@../css/form.css" />
                    <Label fx:id="profileError" stylesheets="@../css/form.css" text="This is an errormessage.">
                      <styleClass>
                         <String fx:value="form-label" />
                         <String fx:value="form-label-error" />
-                     </styleClass></Label>
-                  <Button mnemonicParsing="false" onAction="#handleSave" styleClass="button-light" text="SAVE" />
+                     </styleClass>
+                  </Label>
+                  <HBox alignment="CENTER" spacing="40.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#handleButtonCancelClicked" styleClass="button-light" text="CANCEL" />
+                        <Button layoutX="605.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleButtonSaveClicked" styleClass="button-light" text="SAVE" />
+                     </children>
+                  </HBox>
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
-               <styleClass>
-                  <String fx:value="dialog-background" />
-                  <String fx:value="form-background" />
-               </styleClass>
                <stylesheets>
                   <URL value="@../css/main.css" />
                   <URL value="@../css/form.css" />
                </stylesheets>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <StackPane.margin>
+                  <Insets top="80.0" />
+               </StackPane.margin>
             </VBox>
          </children>
-      </VBox>
+         <padding>
+            <Insets bottom="40.0" top="80.0" />
+         </padding>
+      </StackPane>
+        <fx:include fx:id="topPanel" source="TopPanel.fxml" />
+        <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
     </children>
     <stylesheets>
         <URL value="@../css/main.css" />
