Added consistent background to StartView, LoginView and ProfileView.

--- a/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
@@ -1,3 +1,8 @@
+.root {
+    -fx-background-image: url("../images/start_login_profile_bg.png");
+    -fx-background-size: contain;
+}
+
 .modal-background {
     -fx-background-color: rgba(0, 0, 0, 0.4);
 }
