--- a/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
@@ -23,7 +23,7 @@
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <VBox alignment="CENTER">
                <children>
-                  <Label stylesheets="@../css/main.css" text="WAIT!">
+                  <Label stylesheets="@../css/main.css" text="WAIT">
                      <VBox.margin>
                         <Insets bottom="40.0" />
                      </VBox.margin>
@@ -119,7 +119,7 @@
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <VBox alignment="CENTER">
                <children>
-                  <Label stylesheets="@../css/main.css" text="YOU DID IT!">
+                  <Label stylesheets="@../css/main.css" text="YOU DID IT">
                      <VBox.margin>
                         <Insets bottom="40.0" />
                      </VBox.margin>
