--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -19,7 +19,7 @@
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <VBox alignment="CENTER" prefWidth="1280.0" stylesheets="@../css/main.css">
                <children>
-                  <Label stylesheets="@../css/main.css" text="PLEASE WAIT!">
+                  <Label stylesheets="@../css/main.css" text="PLEASE WAIT">
                      <styleClass>
                         <String fx:value="dialog-text" />
                         <String fx:value="dialog-game-over" />
@@ -59,6 +59,5 @@
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
-      <URL value="@../css/waiting.css" />
    </stylesheets>
 </AnchorPane>
