--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,11 +11,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
+      <ImageView fx:id="level03BackgroundImage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/level03_bg.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="level02BackgroundImage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/level02_bg.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="level01BackgroundImage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/level01_bg.png" />
+         </image>
+      </ImageView>
       <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
          <children>
-            <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <VBox alignment="CENTER" prefWidth="1280.0" stylesheets="@../css/main.css">
                <children>
                   <Label stylesheets="@../css/main.css" text="PLEASE WAIT">
@@ -57,7 +71,4 @@
       <fx:include fx:id="topPanel" source="TopPanel.fxml" />
       <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
    </children>
-   <stylesheets>
-      <URL value="@../css/main.css" />
-   </stylesheets>
 </AnchorPane>
