--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -13,21 +13,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
-      <ImageView fx:id="level03BackgroundImage" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/level03_bg.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="level02BackgroundImage" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/level02_bg.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="level01BackgroundImage" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/level01_bg.png" />
-         </image>
-      </ImageView>
+      <fx:include fx:id="backgroundImage" source="BackgroundImageView.fxml" />
       <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
          <children>
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
